--- a/Presentation_Source/Presentation.tex
+++ b/Presentation_Source/Presentation.tex
@@ -251,7 +251,7 @@ IA Predittiva vs IA Generativa
 \end{frame}
 
 
-\begin{frame}{Possibili modelli}
+\begin{frame}{Possibili modelli \cite{scikit}}
   \begin{center}
     \includegraphics[width=0.85\textwidth]{Pic/dec.png}
   \end{center}
