--- a/Presentation_Source/bibliography.bib
+++ b/Presentation_Source/bibliography.bib
@@ -264,3 +264,8 @@
   url          = {https://informationresilience.org/sockpuppet-report-2021}
 }
 
+
+@online{scikit,
+  url    = {https://scikit-learn.org/stable/auto_examples/classification/plot_classifier_comparison.html#sphx-glr-auto-examples-classification-plot-classifier-comparison-py}
+}
+
