--- a/Presentation_Source/Presentation.tex
+++ b/Presentation_Source/Presentation.tex
@@ -467,7 +467,7 @@ Truffe con Deepfake
       \item Raccolta di pochi secondi di audio di un familiare da social media.
       \item Generazione di una chiamata deepfake in cui la voce simula un sequestro e chiede aiuto.
       \item Elevato realismo emotivo spinge le vittime a versare il riscatto immediatamente.
-      \item Nel 2022 FBI e FTC hanno registrato un aumento del 300 \% di questi attacchi, consigliando di adottare codici di verifica condivisi in anticipo.\cite{fbi_2022_deepfake_kidnap}\cite{ftc_2022_deepfake_kidnap}
+      \item Nel 2022 FBI e FTC hanno registrato un aumento di questi attacchi, consigliando di adottare codici di verifica condivisi in anticipo.\cite{fbi_2022_deepfake_kidnap}\cite{ftc_2022_deepfake_kidnap}
     \end{itemize}
   \end{alertblock}
 \end{frame}
@@ -479,7 +479,7 @@ Truffe con Deepfake
       \item Un video deepfake mostrava Elon Musk presentare “BitVex”, piattaforma di trading cripto con “profitti garantiti” del 30 %.  
       \item L’alta qualità del volto e della voce clonata ha convinto migliaia di utenti a investire.  
       \item Si è trattato di uno schema di pump-and-dump: il valore delle token BitVex è crollato dopo la smentita ufficiale di Musk.  
-      \item Dimostra come la fiducia nei personaggi pubblici possa essere sfruttata per manipolare i mercati.\cite{forbes_bitvex2022}\cite{bbc_bitvex2022}
+      \item Dimostra come la fiducia nei personaggi pubblici possa essere sfruttata per manipolare i mercati.\cite{forbes_bitvex2022}
     \end{itemize}
   \end{alertblock}
 \end{frame}
@@ -500,7 +500,7 @@ Manipolazione dei Social Media
   \begin{alertblock}{Amplificazione automatica}
     \begin{itemize}
       \item Le botnet sociali sono reti di account automatizzati che postano e condividono contenuti in massa secondo schemi prestabiliti.
-      \item Uno studio dell’USC del 2020 ha rilevato che oltre il 20 \% del traffico politico su Twitter negli USA proveniva da bot \cite{uscsocial2020}.
+      \item Uno studio dell’USC del 2020 ha rilevato che oltre il 20 \% del traffico politico su Twitter negli USA proveniva da bot \cite{NgCarley2025,uscsocial2020}.
       \item Questi bot creano “echo chamber” virtuali ripubblicando ripetutamente gli stessi messaggi, dando l’illusione di un consenso ampio \cite{echolab2020}.
       \item Manipolano gli algoritmi delle piattaforme aumentando artificialmente i livelli di engagement e influenzando la visibilità dei contenuti.
     \end{itemize}
@@ -513,7 +513,7 @@ Manipolazione dei Social Media
   \begin{alertblock}{Fabbriche di Like}
     \begin{itemize}
       \item Le click farm impiegano operatori umani, mentre le like farm usano bot automatizzati per generare follower, like e visualizzazioni a pagamento.
-      \item Un’inchiesta del 2022 in Bangladesh ha documentato giovani pagati pochi centesimi per produrre migliaia di interazioni fasulle.\cite{channel4_bangladesh}
+      \item Un’inchiesta del 2022 in Bangladesh ha documentato giovani pagati pochi centesimi per produrre migliaia di interazioni fasulle .\cite{channel4_bangladesh,arthur2013clickfarms}
       \item Secondo l’“Imperva 2022 Bad Bot Report”, i bot farm sfruttano proxy e account fake per eludere i filtri anti-frode delle piattaforme.\cite{imperva_badbot2022}
     \end{itemize}
   \end{alertblock}
@@ -533,7 +533,7 @@ Manipolazione dei Social Media
   \begin{alertblock}{Identità Inventate}
     \begin{itemize}
       \item I “sockpuppet” sono profili gestiti manualmente da operatori che usano foto e dati rubati per impersonare persone reali.
-      \item Nel 2021 il Centre for Information Resilience ha smascherato 80 sockpuppet attivi su Twitter, Facebook e Instagram in India.\cite{cir2021_sockpuppet}\cite{bbc_fake_sikh}
+      \item Nel 2021 il Centre for Information Resilience ha smascherato 80 sockpuppet attivi su Twitter, Facebook e Instagram in India \cite{strick2021realsikh}
       \item Questi account si sono infiltrati in community chiuse e gruppi di discussione per guadagnare fiducia.
       \item Una volta consolidata la reputazione, hanno iniziato a diffondere contenuti di propaganda nazionalista.
     \end{itemize}
@@ -573,8 +573,8 @@ Interferenze Politiche
   \small
   \begin{alertblock}{Propaganda AI‐driven}
     \begin{itemize}
-      \item Dal 2023, Russia e altri attori esterni hanno diffuso video deepfake di funzionari USA; ad esempio, un falso rappresentante del Dipartimento di Stato annunciava attacchi militari inesistenti.\cite{npr_fake_us}
-      \item Siti pseudo‐giornalistici come “D.C. Weekly” sono stati creati ad arte per diffondere fake news e minare la fiducia nelle fonti ufficiali.\cite{washpost_fake}
+      \item Dal 2023, Russia e altri attori esterni hanno diffuso video deepfake di funzionari USA; ad esempio, un falso rappresentante del Dipartimento di Stato annunciava attacchi militari inesistenti.\cite{bond2024russian}
+      \item Siti pseudo‐giornalistici come “D.C. Weekly” sono stati creati ad arte per diffondere fake news e minare la fiducia nelle fonti ufficiali.\cite{gao2024disinformation}
       \item Obiettivo: erodere la credibilità delle istituzioni e preparare il terreno a forme di influenza politica anche oltreoceano.
     \end{itemize}
   \end{alertblock}
@@ -584,13 +584,13 @@ Interferenze Politiche
   \small
   \begin{alertblock}{Deepfake in Dialetti Locali}
     \begin{itemize}
-      \item Nelle elezioni di Delhi 2020 il BJP ha diffuso video deepfake in hindi e haryanvi, lingue non fluentemente parlate dal leader.\cite{india_deepfake}
+      \item Nelle elezioni di Delhi 2020 il BJP ha diffuso video deepfake in hindi e haryanvi, lingue non fluentemente parlate dal leader.\cite{christopher2020deepfakes}
       \item Sincronizzazione digitale del labiale e voce sintetica hanno creato l’illusione di un discorso diretto alle comunità locali.
     \end{itemize}
   \end{alertblock}
   \begin{alertblock}{Sockpuppet Patriottici}
     \begin{itemize}
-      \item Reti di account falsi hanno veicolato messaggi nazionalisti contro dissidenti Sikh.\cite{bbc_fake_sikh}
+      \item Reti di account falsi hanno veicolato messaggi nazionalisti contro dissidenti Sikh.\cite{menon2021sikhs}
       \item Foto rubate e narrazioni coordinate venivano usate per segmentare il pubblico e seminare discordia.
     \end{itemize}
   \end{alertblock}
@@ -600,7 +600,7 @@ Interferenze Politiche
   \small
   \begin{alertblock}{Operazione “Spamouflage”}
     \begin{itemize}
-      \item Campagne su YouTube, Instagram e Twitter con video deepfake contro la presidente Tsai Ing-wen.\cite{taiwan_deepfake}
+      \item Campagne su YouTube, Instagram e Twitter con video deepfake contro la presidente Tsai Ing-wen.\cite{milmo2024china}
       \item Meta ha rimosso migliaia di account coinvolti in comportamenti inautentici coordinati.
     \end{itemize}
   \end{alertblock}
@@ -616,7 +616,7 @@ Interferenze Politiche
   \small
   \begin{alertblock}{Video Fake di Zelenskyj}
     \begin{itemize}
-      \item All’inizio dell’invasione russa del 2022, un deepfake di Zelenskyj annunciava la resa dell’Ucraina.\cite{zelensky_fake}
+      \item All’inizio dell’invasione russa del 2022, un deepfake di Zelenskyj annunciava la resa dell’Ucraina.\cite{wakefield2022deepfake,}
       \item Il clip fu trasmesso brevemente da un canale TV compromesso, causando disorientamento.
       \item Il vero presidente Zelenskyj smentì ufficialmente via social, ripristinando la chiarezza.
     \end{itemize}
@@ -632,7 +632,6 @@ Interferenze Politiche
     Chi diffonde contenuti “verosimili” generati o manipolati da IA deve:
     \begin{enumerate}
       \item Etichettarli chiaramente come “sintetici / AI-generated”.
-      \item Conservare e rendere disponibili i metadati C2PA.
       \item Rimuovere su richiesta delle autorità in caso di illeciti (terrorismo, pornografia non consensuale, ecc.).
     \end{enumerate}
   \end{alertblock}
