--- a/Presentation_Source/bibliography.bib
+++ b/Presentation_Source/bibliography.bib
@@ -209,10 +209,9 @@
 }
 
 @online{forbes_bitvex2022,
-  author = {Smith, John},
-  title  = {Deepfake Video of Elon Musk Promotes Fake Crypto “BitVex”},
+  title  = {ELON MUSK DIVENTA UN DEEPFAKE PROMOTORE DI CRYPTO: ATTENTI ALLA TRUFFA!},
   year   = {2022},
-  url    = {https://www.forbes.com/sites/johnsmith/2022/05/10/deepfake-elon-musk-bitvex-scam}
+  url    = {https://tech.everyeye.it/notizie/elon-musk-deepfake-promotore-crypto-attenti-truffa-588756.html}
 }
 
 @online{bbc_bitvex2022,
@@ -267,5 +266,105 @@
 
 @online{scikit,
   url    = {https://scikit-learn.org/stable/auto_examples/classification/plot_classifier_comparison.html#sphx-glr-auto-examples-classification-plot-classifier-comparison-py}
+}
+
+
+@article{NgCarley2025,
+  author  = {Ng, Lynnette Hui Xian and Carley, Kathleen M.},
+  title   = {A global comparison of social media bot and human characteristics},
+  journal = {Scientific Reports},
+  volume  = {15},
+  number  = {1},
+  pages   = {10973},
+  year    = {2025},
+  doi     = {10.1038/s41598-025-96372-1},
+  url     = {https://www.nature.com/articles/s41598-025-96372-1}
+}
+
+@article{arthur2013clickfarms,
+  author  = {Arthur, Charles},
+  title   = {How low-paid workers at 'click farms' create appearance of online popularity},
+  journal = {The Guardian},
+  year    = {2013},
+  month   = {August},
+  day     = {2},
+  url     = {https://www.theguardian.com/technology/2013/aug/02/click-farms-appearance-online-popularity},
+  note    = {Accessed: 2025-05-16}
+}
+
+@techreport{strick2021realsikh,
+  author      = {Benjamin Strick},
+  title       = {Analysis of the \#RealSikh Influence Operation},
+  institution = {Centre for Information Resilience},
+  year        = {2021},
+  month       = {November},
+  url         = {https://www.info-res.org/app/uploads/2024/11/Analysis-of-the-RealSikh-Network.pdf},
+  note        = {Accessed: 2025-05-16}
+}
+
+
+@article{bond2024russian,
+  author  = {Shannon Bond},
+  title   = {This is what Russian propaganda looks like in 2024},
+  journal = {NPR},
+  year    = {2024},
+  month   = {June},
+  day     = {6},
+  url     = {https://www.npr.org/2024/06/06/g-s1-2965/russia-propaganda-deepfakes-sham-websites-social-media-ukraine},
+  note    = {Accessed: 2025-05-16}
+}
+
+@techreport{gao2024disinformation,
+  title        = {Foreign Disinformation: Defining and Detecting Threats},
+  institution  = {U.S. Government Accountability Office},
+  year         = {2024},
+  number       = {GAO-24-107600},
+  month        = {September},
+  url          = {https://www.gao.gov/products/gao-24-107600},
+  note         = {Accessed: 2025-05-16}
+}
+
+@article{christopher2020deepfakes,
+  author  = {Nilesh Christopher},
+  title   = {An Indian politician is using deepfakes to try and win voters},
+  journal = {MIT Technology Review},
+  year    = {2020},
+  month   = {February},
+  day     = {19},
+  url     = {https://www.technologyreview.com/2020/02/19/868173/an-indian-politician-is-using-deepfakes-to-try-and-win-voters/},
+  note    = {Accessed: 2025-05-16}
+}
+
+@article{menon2021sikhs,
+  author  = {Shruti Menon and Flora Carmichael},
+  title   = {Farm laws: Sikhs being targeted by fake social media profiles},
+  journal = {BBC News},
+  year    = {2021},
+  month   = {November},
+  day     = {24},
+  url     = {https://www.bbc.com/news/world-asia-india-59338245},
+  note    = {Accessed: 2025-05-16}
+}
+
+@article{milmo2024china,
+  author  = {Dan Milmo and Amy Hawkins},
+  title   = {How China is using AI news anchors to deliver its propaganda},
+  journal = {The Guardian},
+  year    = {2024},
+  month   = {May},
+  day     = {18},
+  url     = {https://www.theguardian.com/technology/article/2024/may/18/how-china-is-using-ai-news-anchors-to-deliver-its-propaganda},
+  note    = {Accessed: 2025-05-16}
+}
+
+@article{wakefield2022deepfake,
+  author  = {Jane Wakefield},
+  title   = {Deepfake presidents used in Russia-Ukraine war},
+  journal = {BBC News},
+  year    = {2022},
+  month   = {March},
+  day     = {18},
+  url     = {https://www.bbc.com/news/technology-60780142},
+  note    = {Accessed: 2025-05-16}
 }
 
