--- a/Presentation_Source/Presentation.tex
+++ b/Presentation_Source/Presentation.tex
@@ -103,6 +103,13 @@ Storia del fenomeno
   \end{center}
 \end{frame}
 
+\begin{frame}{Never trust quotes on the internet -Abraham Lincoln}
+  \begin{center}
+    \includegraphics[width=0.7\textwidth]{Pic/deepold.png}
+  \end{center}
+\end{frame}
+
+
 
 
 \begin{frame}{Timeline 1860–2025 (1/3)}
@@ -666,6 +673,30 @@ Interferenze Politiche
   \end{alertblock}
 \end{frame}
 
+
+\begin{frame}{Take-aways}
+  \begin{alertblock}{Sintesi dei Punti Chiave}
+    \begin{enumerate}
+      \item \textbf{Commodity IA:} i deepfake sono oggi strumenti accessibili a molti, non solo a pochi laboratori di ricerca.
+      \item \textbf{Difesa multilivello:} combinare watermark hardware, standard C2PA, educazione digitale e tecniche forensi.
+      \item \textbf{Rischio real-time:} live generation di audio/video in video-chiamata (Teams, Zoom) sarà il prossimo fronte d’attacco.
+
+    \end{enumerate}
+  \end{alertblock}
+\end{frame}
+
+
+\begin{frame}{Presentazione e contatti}
+\begin{center}
+La presentazione può essere scaricata da qui
+\end{center}
+\begin{center}
+\qrcode{https://github.com/marzione00/LectureDeepfake2025}
+\end{center}
+\begin{center}
+per ulteriori informazioni potete scrivermi a marzio.decorato@unimi.it 
+\end{center}
+\end{frame}
 % =========================================================
 \begin{frame}[allowframebreaks]{Riferimenti}
 \printbibliography[heading=none]
